fix overflow once again

--- a/src/scss/components/Table.scss
+++ b/src/scss/components/Table.scss
@@ -13,7 +13,8 @@
 
     &__column {
       width: var.$column_min_width;
-      overflow: auto;
+      overflow-x: auto;
+      overflow-y: hidden;
       &:nth-child(1) {
         padding-left: 60px;
       }
